* add a hosted service to cache information from Code Project API. * add wrapper classes for classes related to HttpWebRequest for unit tests. * add wrapper classes for classes related to Html Agility Pack for unit tests. * add integration tests for the hosted service. * get connection strings from environment variables. * update react-scripts package version from 3.2.0 to 3.4.0. * update node-sass package version from 4.13.0 to 4.13.1.

--- a/YCodeLab/ClientApp/src/components/VideoGameDevs.scss
+++ b/YCodeLab/ClientApp/src/components/VideoGameDevs.scss
@@ -2,13 +2,35 @@
 @import '../bootstrap.scss';
 
 .video-game-devs-page {
-  .site-category-name {
-    @extend .font-marck-script;
-    @extend .text-center;
-    font-size: 4em;
+  padding-bottom: 20px;
+
+  .intro {
+    margin-top: 40px;
+    margin-bottom: 40px;
+    justify-content: center;
+    
+    *[class^="col"] {
+      max-width: 800px;
+    }
   }
 
-  > * {
-    margin-bottom: 20px;
+  .section {
+    margin-top: 0px;
+    margin-bottom: 0px;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    /* height: calc(100vh / 2); */
+    /* min-height: 355px; */
+    height: 355px;
+  }
+
+  .section:nth-child(odd) {
+    flex-direction: row;
+    background-color: #e7faf5;
+  }
+
+  .section:nth-child(even) {
+    flex-direction: row-reverse;
+    background-color: inherit;
   }
 }
