--- a/YCodeLab/ClientApp/src/components/TechWritings.scss
+++ b/YCodeLab/ClientApp/src/components/TechWritings.scss
@@ -21,4 +21,20 @@
     margin-right: 0px;
     margin-left: 0px;
   }
+
+  .card {
+    border: 0px;
+    margin-bottom: 20px;
+
+    .card-header {
+      border-radius: 0.5rem 0.5rem 0 0;
+      border-bottom: 0px;
+      background-color: #0000001e;
+    }
+
+    .card-body {
+      border-radius: 0 0 0.5rem 0.5rem;
+      background-color: #0000000d;
+    }
+  }
 }
