* add and update contents in the footer to make it alternate my profile page. * remove my profile page. * rename ThirdPartyLibDevs page to ContributionsIn3rdParty page. * renamed WebAppDevs page to MyProjects page. * add code in App.tsx to scroll to top at every page transition.

--- a/YCodeLab/ClientApp/src/components/Footer.scss
+++ b/YCodeLab/ClientApp/src/components/Footer.scss
@@ -1,6 +1,7 @@
 @import '../bootstrap.scss';
 @import 'bootstrap/scss/_variables.scss';
 @import 'bootstrap/scss/mixins/_breakpoints.scss';
+@import '../custom.scss';
 
 .footer {
 
@@ -13,12 +14,26 @@
   .profile-img-col {
     @extend .text-center;
     flex: 100%;
-    padding-right: 0px;
     padding-bottom: 20px;
+
+    @extend .col-center;
   }
 
   .profile-content-col {
     @extend .col-sm-12;
+  }
+
+  @include media-breakpoint-up(lg) {
+
+    .profile-img-col {
+      flex: none;
+      padding-right: 20px;
+    }
+
+    .profile-content-col {
+      flex: 2;
+    }
+
   }
 
   .image-cropper {
@@ -36,37 +51,53 @@
   .links-col {
     @extend .text-right;
     flex: 100%;
-  }
+    padding-top: 20px;
 
-  .github-link {
-    margin-top: 30px;
-    margin-bottom: 30px;
+    .navbar-nav {
+      flex-direction: row;
+
+      .nav-item {
+        @extend .col-4;
+      }
+    }
   }
 
   @include media-breakpoint-up(md) {
-
-    .profile-img-col {
-      flex: none;
-      padding-right: 20px;
-    }
-
-    .profile-content-col {
-      flex: 2;
-    }
-
     .links-col {
-      @extend .text-md-right;
       flex: 100%;
-    }
+      
+      .navbar-nav {
+        flex-direction: row;
 
+        .nav-item {
+            @extend .col-md-3;
+        }
+      }
+    }
   }
 
   @include media-breakpoint-up(lg) {
-
     .links-col {
       flex: 1;
+      
+      .navbar-nav {
+        flex-direction: column;
+
+        .nav-item {
+            @extend .col-lg-12;
+        }
+      }
+    }
+  }
+
+  .LI-profile-badge {
+    > div {
+      @extend .col-left;
     }
 
+    .LI-badge-container {
+      background-color: #bdbbb3;
+    }
   }
 
 }
