--- a/YCodeLab/ClientApp/src/components/NavMenu.scss
+++ b/YCodeLab/ClientApp/src/components/NavMenu.scss
@@ -1,4 +1,6 @@
-﻿html { font-size: 14px; }
+﻿@import '../bootstrap.scss';
+
+html { font-size: 14px; }
 
 @media (min-width: 768px) {
     html { font-size: 16px; }
@@ -14,7 +16,28 @@
 
   .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
 
-  .github-link {
-    margin-left: 30px;
+  .nav-icon {
+    padding-top: 0px;
+    padding-bottom: 0px;
+    padding-left: 8px;
+    padding-right: 8px;
+  }
+
+  .icon-github {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 4px;
+    padding-right: 4px;
+  }
+
+  .nav-icon-label {
+    display: inline;
+    margin-left: 10px;
+  }
+
+  @include media-breakpoint-up(lg) {
+    .nav-icon-label {
+      display: none;
+    }
   }
 }
