--- a/YCodeLab/ClientApp/src/components/VideoGameDevs.scss
+++ b/YCodeLab/ClientApp/src/components/VideoGameDevs.scss
@@ -4,6 +4,16 @@
 .video-game-devs-page {
   padding-bottom: 20px;
 
+  h2 {
+    text-align: center;
+  }
+
+  @include media-breakpoint-up(lg) {
+    h2 {
+      text-align: left;
+    }
+  }
+
   .intro {
     margin-top: 40px;
     margin-bottom: 40px;
@@ -21,7 +31,7 @@
     padding-bottom: 20px;
     /* height: calc(100vh / 2); */
     /* min-height: 355px; */
-    height: 355px;
+    /* height: 420px; */
   }
 
   .section:nth-child(odd) {
@@ -32,5 +42,20 @@
   .section:nth-child(even) {
     flex-direction: row-reverse;
     background-color: inherit;
+  }
+
+  .col-tags {
+    @extend .col-center;
+
+    > .badge {
+      margin-right: 4px;
+    }
+  }
+
+  @include media-breakpoint-up(lg) {
+    .col-tags {
+      display: flex;
+      justify-content: left;
+    }
   }
 }
