* stop using Workbox Service Worker in React app. * change favicon. * extract logic injecting hyper-links to text, from components/Contribution3rdParty.tsx into utilities/linkinjector.tsx. * add links in VideoGameDevs.tsx.

--- a/YCodeLab/ClientApp/src/components/NavMenu.scss
+++ b/YCodeLab/ClientApp/src/components/NavMenu.scss
@@ -8,10 +8,19 @@ html { font-size: 14px; }
 
 .nav-menu {
 
+  .favicon {
+    width: 32px;
+    height: 32px;
+    margin-top: 4px;
+    margin-bottom: 4px;
+    margin-left: 4px;
+    margin-right: 8px;
+  }
+
   a.navbar-brand {
-      white-space: normal;
-      text-align: center;
-      word-break: break-all;
+    white-space: normal;
+    text-align: center;
+    word-break: break-all;
   }
 
   .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
