add a content about React-Redux Stethoscope project to My Projects page. renew layout thoroughly. add table of contents in My Projects and 3rd Party Contribution page.

--- a/YCodeLab/ClientApp/src/components/TechWritings.scss
+++ b/YCodeLab/ClientApp/src/components/TechWritings.scss
@@ -16,6 +16,20 @@
     font-size: 1.4em;
   }
 
+  @include media-breakpoint-up(lg) {
+    .page-section {
+      padding-top: 2em;
+      padding-bottom: 2em;
+    }
+  }
+
+  @include media-breakpoint-up(xl) {
+    .page-section {
+      padding-top: 6em;
+      padding-bottom: 6em;
+    }
+  }
+
   .writing-props-row {
     @extend .row;
     margin-right: 0px;
