--- a/YCodeLab/ClientApp/src/components/ContributionsIn3rdParty.scss
+++ b/YCodeLab/ClientApp/src/components/ContributionsIn3rdParty.scss
@@ -14,6 +14,12 @@
       text-align: center;
   }
 
+  .table-of-contents {
+    .h2 {
+      font-family: "Open Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
+    }
+  }
+
   @include media-breakpoint-up(lg) {
       h2 {
           text-align: left;
