--- a/YCodeLab/ClientApp/src/components/MyProjects.scss
+++ b/YCodeLab/ClientApp/src/components/MyProjects.scss
@@ -2,18 +2,30 @@
 @import '../bootstrap.scss';
 
 .page-my-projects {
-  h1 {
-    @extend .font-marck-script;
-    @extend .text-center;
-    font-size: 4em;
-  }
 
   h2 {
     @extend .font-marck-script;
+    @extend .text-center;
     font-size: 3em;
   }
 
-  > * {
-    margin-bottom: 20px;
+  // > * {
+  //   margin-bottom: 20px;
+  // }
+
+  .page-section-web-app-dev {
+    background-image: linear-gradient(-180deg, rgb(255, 241, 251) 0%, rgb(255, 248, 253) 100%);
+  }
+
+  .page-section-lib-dev {
+    background-image: linear-gradient(-180deg, rgb(248, 255, 241) 0%, rgb(252, 255, 249) 100%);
+  }
+
+  .page-section-video-game-dev {
+    background-image: linear-gradient(-180deg, rgb(241, 255, 254) 0%, rgb(248, 255, 255) 100%);
+  }
+
+  .page-section-tech-writings {
+    background-image: linear-gradient(-180deg, rgb(255, 251, 241) 0%, rgb(255, 253, 248) 100%);
   }
 }
