--- a/YCodeLab/ClientApp/src/components/MyProjects.scss
+++ b/YCodeLab/ClientApp/src/components/MyProjects.scss
@@ -9,9 +9,16 @@
     font-size: 3em;
   }
 
-  // > * {
-  //   margin-bottom: 20px;
-  // }
+  .table-of-contents {
+    .h2 {
+      @extend .font-marck-script;
+      font-size: 2em;
+    }
+
+    .h3 {
+      font-size: 0.6em;
+    }
+  }
 
   .page-section-web-app-dev {
     background-image: linear-gradient(-180deg, rgb(255, 241, 251) 0%, rgb(255, 248, 253) 100%);
