--- a/YCodeLab/ClientApp/src/components/MyProjects.scss
+++ b/YCodeLab/ClientApp/src/components/MyProjects.scss
@@ -35,4 +35,8 @@
   .page-section-tech-writings {
     background-image: linear-gradient(-180deg, rgb(255, 251, 241) 0%, rgb(255, 253, 248) 100%);
   }
+
+  .badge {
+    margin-right: 4px;
+  }
 }
