add contents to pages under /strawberry-joystic

--- a/frontend/apps/ycode-lab/src/styles.scss
+++ b/frontend/apps/ycode-lab/src/styles.scss
@@ -2,9 +2,15 @@
 @import "bootstrap/scss/functions";
 @import "bootstrap/scss/variables";
 
+@import url("https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
+
 // Override Bootstrap variables here
 $primary: #ff5733;
-$font-family-base: 'Arial, sans-serif';
+$font-family-base: Lato, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
+  'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
+  'Noto Color Emoji';
+$headings-font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, $font-family-base;
 
 // Override container width variables
 $container-max-widths: (
@@ -32,17 +38,12 @@ $theme-colors: (
 
 html {
   -webkit-text-size-adjust: 100%;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
-  'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
-  'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol',
-  'Noto Color Emoji';
   line-height: 1.5;
   tab-size: 4;
   scroll-behavior: smooth;
 }
 
 body {
-  font-family: inherit;
   line-height: inherit;
   margin: 0;
 }
@@ -55,6 +56,10 @@ body {
 
 a {
   text-decoration: none;
+}
+
+li {
+  font-family: $headings-font-family;
 }
 
 .hidden {
