--- a/frontend/apps/ycode-lab/src/app/app.module.scss
+++ b/frontend/apps/ycode-lab/src/app/app.module.scss
@@ -6,10 +6,6 @@
 // Fonts ///////////////////////////////////////////
 @import url('https://fonts.googleapis.com/css?family=Marck+Script&display=swap');
 
-.font-common {
-  font-family: "Open Sans", "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
-}
-
 .font-marck-script {
   font-family: 'Marck Script', cursive;
 }
@@ -21,6 +17,11 @@
   top: 0px;
   width: 100%;
   z-index: 200;
+
+  .header-logo {
+    width: 32px;
+    margin: 0rem 1rem;
+  }
 }
 
 .footer {
@@ -99,7 +100,7 @@
         img {
           width: 140px;
         }
-  
+
         .home-site-category-blender-unity-icon {
           position: relative;
           top: -30px;
@@ -120,6 +121,10 @@
       @include media-breakpoint-up(lg) {
         font-size: 6rem;
       }
+    }
+
+    h3 {
+      font-size: 1.3rem;
     }
 
     .tech-writings-intro-container {
@@ -143,7 +148,6 @@
   .my-projects {
     display: flex;
     flex-direction: column;
-    // align-items: center;
 
     h1 {
       @extend .font-marck-script;
@@ -175,7 +179,8 @@
     }
 
     .my-projects-section {
-      padding: 4rem 0rem 0rem;
+      padding: 4rem 0rem 1.6rem;
+
       h2 {
         @extend .font-marck-script;
         font-size: 1.8rem;
@@ -201,6 +206,20 @@
     .my-project {
       background-image: linear-gradient(-180deg,#fff1fb,#fff8fd);
       padding: 1.6rem 0rem;
+    }
+
+    .my-project-logo {
+      margin: 10px;
+      height: 32px;
+    }
+
+    .my-project-sublogo {
+      width: 26px;
+      margin-left: 10px;
+
+      &.google-play {
+        width: 160px;
+      }
     }
 
     .my-project-code-snippet {
